<resources>
    <string name="app_name">YaaFood</string>
    <string name="recomendation_screen_label">Rekomendasi Resep</string>
    <string name="tagline">Dapatkan Resep Kreatif Tanpa Ribet!</string>
    <string name="profile">Profile</string>
    <string name="settings">settings\n</string>
    <string name="shot_tips">shot tips</string>
    <string name="section_article_newest">Artikel masakan hari ini</string>
    <string name="section_popular_communities">Komunitas Populer</string>
    <string name="section_recipe_idea">Ide resep hari ini</string>
    <string name="find_recipe">Cari Resep</string>
    <string name="recipe_of">Resep Olahan %s</string>
    <string name="section_you_article">Artikel kamu</string>
    <string name="section_ingredient">Bahan-bahan</string>
    <string name="section_step">Langkah</string>
    <string name="section_recipe_recomendation">Ide Resep</string>
    <string name="error_get_recomendation">Yah...gabisa minta rekomendasi nih :(</string>
    <string name="timeout_get_recomendation">Gambar ga bisa dibaca nih :(</string>
    <string name="btn_add_desc">Tambah Bahan</string>
    <string name="btn_cancel">Batal</string>
    <string name="snap_instruction">Posisikan bahan di tengah frame</string>
    <string name="find_other_article">Temukan artikel lainnya</string>
    <string name="find_other_community">Temukan komunitas lainnya</string>
    <string name="success_create_article">Pembuatan artikel berhasil!</string>
    <string name="input_image_article">Masukkan Gambar pada Artikel ini!</string>
    <string name="failed_create_article">Gagal mengunggah artikel!</string>
    <string name="failed_register">Gagal untuk melakukan pendaftaran!</string>
    <string name="failed_login">Email atau password salah!</string>
    <string name="success_login">Login Berhasil! Hello %s</string>
    <string name="success_register">Berhasil melakukan pendaftaran! Silahkan melakukan login</string>
    <string name="success_update_profile">Berhasil mengubah profile!</string>
    <string name="failed_update_profile">Gagal mengubah profile!</string>
    <string name="no_login_will_comment">Lakukan login terlebih dahulu</string>

    <string name="dummy_article_title">Nasi Goreng Megalodon </string>
    <string name="dummy_article_user">Bagus Sudirman</string>
    <string name="dummy_article_description">Nasi goreng yang sangat amat teramat mantap sekali</string>
    <string name="dummy_ingredient">Telur</string>
    <string name="dummy_list_ingredients">Telur, nasi, bawang merah, kentang, bawang putih, minyak goreng, udang</string>
    <string name="preview_image">Preview Image</string>
    <string name="open_gallery">Buka Gallery</string>
    <string name="capture">capture</string>
    <string name="icon_show_tips">icon show tips</string>
    <string name="divider">divider</string>
    <string name="section_give_feedback">Beri feedback pada hasil rekomendasi</string>
    <string name="hint_give_feedback">Beri feedback</string>
    <string name="back_button">back button</string>
    <string name="post_button">Post Button</string>
    <string name="add_article_image">Tambahkan gambar artikel</string>
    <string name="title_input_placeholder">Judul: Tempe orak-arik</string>
    <string name="description_input_placeholder">Deskripsikan tentang makanan ini. Tentang asal masakan ini? manfaat dari makanan? kandungan gizi?</string>
    <string name="ingredient_input_placeholder">100gram tempe</string>
    <string name="delete_ingredient">delete ingredient</string>
    <string name="add_ingredient_input">Bahan</string>
    <string name="add_steps_input">Langkah</string>
    <string name="step_input_placeholder">Potong tempe</string>
    <string name="input_email_placeholder">email</string>
    <string name="input_password_placeholder">password</string>
    <string name="tab_login">Login</string>
    <string name="tab_register">Register</string>
    <string name="login_to_account">Masuk ke akunmu</string>
    <string name="login_benefit">Buat artikel, gabung komunitas, dan lainnya</string>
    <string name="password_and_confPassword_not_same">Password dan Confirm Password Tidak Sama</string>
    <string name="input_name_placeholder">nama</string>
    <string name="login">Login</string>
    <string name="input_conf_password_placeholder">konfirmasi password</string>
    <string name="register">Register</string>
    <string name="not_have_article">Anda belum memiliki artikel</string>
    <string name="create_aticle">Tulis Artikel</string>
    <string name="retake_photo">Foto ulang</string>
    <string name="input_ingredient">Tulis bahan</string>
    <string name="add_ingredients">Tambah Bahan</string>
    <string name="search_recipe">Cari Resep</string>
    <string name="cant_remove_ingredient">Tidak dapat menghapus bahan terakhir</string>
    <string name="section_give_comment">Komentar</string>
    <string name="searchbar_hint">Search</string>
    <string name="hint_give_comment">Beri Komentar</string>
    <string name="user_name">Bagus</string>
    <string name="article_undifined">Maaf kami tidak menemukann artikel yang anda cari</string>
    <string name="settings_label">Pengaturan</string>
    <string name="edit_photo_profile">Ubah foto profile</string>
    <string name="yes">Iya</string>
    <string name="cancel">Ga jadi deh</string>
    <string name="logout_confirmation">Yakin mau keluar nih ?</string>
    <string name="label_logout">Keluar akun</string>
    <string name="save_update">Simpan Perubahan</string>
    <string name="comment">Komentar</string>
    <string name="other_article">Artikel Lainnya</string>
</resources>