<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.auth.RegisterFragment">

    <RelativeLayout
        android:id="@+id/loading_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50FEF7DD"
        android:elevation="24dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:indeterminateTint="@color/primary500"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_border_rounded"
            android:hint="@string/input_name_placeholder"
            android:maxLines="1"
            android:padding="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_input_border_rounded"
            android:hint="@string/input_email_placeholder"
            android:maxLines="1"
            android:padding="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_input_border_rounded"
            android:hint="@string/input_password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_conf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_input_border_rounded"
            android:hint="@string/input_conf_password_placeholder"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="12dp"
            android:text="@string/register"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:cornerRadius="8dp" />
    </LinearLayout>

</RelativeLayout>