<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".screen.recomendation.AddIngredientsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/add_ingredients"
        android:textColor="@color/neutral700"
        android:textFontWeight="600"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ingredients_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        tools:itemCount="2"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_ingredient_input"
        tools:orientation="vertical" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_ingredient_input"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_ingredient_input"
        android:textColor="@color/neutral500"
        android:textFontWeight="600"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/neutral500" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="8dp"
        android:text="@string/search_recipe"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:cornerRadius="8dp" />
</LinearLayout>