<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.createarticle.CreateArticleActivity">

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/appbar">-->

    <!--        <ProgressBar-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_centerInParent="true"-->
    <!--            android:indeterminateTint="@color/primary500" />-->
    <!--    </RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary500"
        android:elevation="24dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back"
            app:tint="@color/primary900"
            tools:ignore="TouchTargetSizeCheck" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/primary900"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/post_button"
            android:src="@drawable/ic_post"
            app:tint="@color/primary900"
            tools:ignore="TouchTargetSizeCheck" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/image_article_container"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/primary100">

                <ImageView
                    android:id="@+id/preview_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/editable_image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/capsule_overlay_bg"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageButton
                        android:id="@+id/btn_edit_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_gallery_edit"
                        app:tint="@color/white" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:background="@color/white" />

                    <ImageButton
                        android:id="@+id/btn_delete_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_trash"
                        app:tint="@color/white" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/image_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/food_placeholder" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="24dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/primary900" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:text="@string/add_article_image"
                            android:textColor="@color/primary900" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_border_rounded"
                    android:hint="@string/title_input_placeholder"
                    android:padding="8dp"
                    android:textColor="@color/neutral700"
                    android:textFontWeight="600"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/text_input_border_rounded"
                    android:gravity="top|left"
                    android:hint="@string/description_input_placeholder"
                    android:maxLines="4"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    style="@style/h3_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section_ingredient" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_ingredient_input" />

                <LinearLayout
                    android:id="@+id/btn_add_ingredient_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_add"
                        app:tint="@color/neutral500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/add_ingredient_input"
                        android:textColor="@color/neutral500"
                        android:textFontWeight="600" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    android:background="@color/neutral300" />

                <TextView
                    style="@style/h3_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section_step" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_steps_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_step_input" />

                <LinearLayout
                    android:id="@+id/btn_add_step_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_add"
                        app:tint="@color/neutral500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/add_steps_input"
                        android:textColor="@color/neutral500"
                        android:textFontWeight="600" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>